<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.com.masterhelper.journey.ui.JourneysListView">
  <item
    android:title="@string/force_menu_item_title"
    >
    <menu
      >
      <item
        android:title="@string/force_advantages_title"
        android:id="@+id/ADVANCE_SETTING_ID"/>
      <item
        android:title="@string/force_menu_create_item_title"
        android:id="@+id/FORCES_SETTINGS"/>
    </menu>
  </item>
  <item
    android:id="@+id/ACTION_SETTINGS"
    android:title="@string/action_settings"
    android:orderInCategory="100"
    app:showAsAction="never"/>
  <item
    android:title="@string/abilities_settings"
    android:id="@+id/ABILITIES_SETTINGS"/>
</menu>
