<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".CreateNewItemDialog">

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <TextView
      android:text="@string/journey_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/CREATE_ITEM_TITLE_ID"/>

    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"
      android:ems="10"
      android:id="@+id/ITEM_NAME_ID"
      android:autofillHints=""/>

    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textMultiLine"
      android:ems="10"
      android:id="@+id/ITEM_DESCRIPTION_ID"
      android:text="@string/description"
      android:visibility="gone"/>

    <CheckBox
      android:text="@string/script_has_battle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/SCRIPT_HAS_BATTLE_SCENE_ID"
      android:visibility="gone"/>

    <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ITEM_CANCEL_BTN_ID"
        android:layout_weight="1"/>

      <Button
        android:text="@string/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ITEM_CREATE_BTN_ID"
        android:layout_weight="1"/>
    </LinearLayout>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>