<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              style="@style/rowStyled"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="2dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:visibility="visible">

      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        style="@style/ConstraintLayoutPaddingStyled"
        android:gravity="center_vertical"
        android:id="@+id/SCRIPT_TITLE_BAR_ID"
        android:padding="2dp">

        <TextView
          android:text="@string/name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/SCRIPT_TITLE_ID"
          android:layout_weight="10"
          android:paddingLeft="8dp"/>

        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:srcCompat="@mipmap/baseline_done_black_18dp"
          android:id="@+id/IS_SCRIPT_DONE_FLAG_ID"
          android:layout_weight="1"
          tools:visibility="visible"
          android:contentDescription="@string/isDoneFlag"/>

        <ImageButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:srcCompat="@mipmap/baseline_filter_list_black_18dp"
          android:id="@+id/SCRIPT_TOGGLER_ID"
          android:layout_weight="1"
          android:scaleType="center"
          android:layout_gravity="clip_vertical"
          android:contentDescription="@string/toggleAccordionButtonDescription"
          style="@style/common_action_button"
          android:clickable="false"/>

      </LinearLayout>

      <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ConstraintLayoutPaddingStyled"
        android:id="@+id/ACCORDION_SCRIPT_BODY_ID"
        android:visibility="visible">

        <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          style="@style/rowStyled"
          android:gravity="center_vertical"
          android:id="@+id/SCRIPT_BATTLE_EVENT_WRAPPER_ID">

          <TextView
            android:text="@string/script_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"/>

          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/baseline_play_arrow_black_18dp"
            android:id="@+id/SCRIPT_START_BTN_ID"
            android:layout_weight="1"
            android:minHeight="40dp"
            android:contentDescription="@string/screen_name_scene_start"
            style="@style/common_action_button"/>
        </LinearLayout>

        <TextView
          android:text="@string/scene_description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/SCRIPT_DESCRIPTION_ID"
          style="@style/rowStyled"
          tools:text="@string/script_description"/>

        <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/baseline_clear_black_18dp"
            android:id="@+id/SCRIPT_DELETE_BTN_ID"
            android:layout_weight="1"
            style="@style/delete_action_button"/>

          <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/baseline_create_black_18dp"
            android:id="@+id/SCRIPT_EDIT_BTN_ID"
            android:layout_weight="1"
            style="@style/common_action_button"/>

          <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/baseline_done_black_18dp"
            android:id="@+id/SCRIPT_BTN_DONE_ID"
            android:layout_weight="1"
            style="@style/common_action_button"/>

        </LinearLayout>

      </LinearLayout>

    </LinearLayout>

  </androidx.cardview.widget.CardView>
</LinearLayout>