<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.example.com.masterhelper.force.ui.AddNewForce">

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:id="@+id/FORCE_TITLE_NAME_ID"
      android:layout_marginTop="9dp"
      android:inputType="textMultiLine"
      android:hint="@string/name"/>

    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textMultiLine"
      android:gravity="start|top"
      android:ems="10"
      android:id="@+id/FORCE_DESCCRIPTION_ID"
      android:hint="@string/description"/>

    <RadioGroup
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:checkedButton="@id/FORCE_TYPE_SINGLE_ID"
      android:layout_marginBottom="4dp"
      android:id="@+id/FORCE_TYPE_ID">

      <RadioButton
        android:text="@string/person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FORCE_TYPE_SINGLE_ID"
        android:layout_weight="1"/>

      <RadioButton
        android:text="@string/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FORCE_TYPE_GROUP_ID"
        android:layout_weight="1"/>

    </RadioGroup>

    <androidx.viewpager.widget.ViewPager
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/FORCE_RELATIONS_VIEWER_ID"/>

  </LinearLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:src="@mipmap/baseline_done_black_18dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:id="@+id/FORCE_DONE_BTN_ID"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    style="@style/float_button_styles"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    app:srcCompat="@mipmap/baseline_clear_black_18dp"
    android:id="@+id/FORCE_DELETE_BTN_ID"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    style="@style/float_alert_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>