<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:focusable="true"
  android:focusableInTouchMode="true"
  tools:context="com.masterhelper.ui.enemies.EditEnemy">

  <EditText
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:ems="10"
    android:id="@+id/ENEMY_EDIT_NAME_ID"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:hint="@string/add_enemy_title_placeholder"
    app:layout_constraintEnd_toEndOf="parent"
    />

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ENEMY_EDIT_NAME_ID"
    android:id="@+id/linearLayout3"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <TextView
      android:text="@string/enemy_max_health_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/MAX_HEALTH_TITLE_ID"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_weight="2"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/MAX_HEALTH_VALUE_ID"
      android:layout_weight="0"/>
  </LinearLayout>

  <ScrollView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:paddingBottom="80dp"
    android:paddingTop="20dp"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
    >

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

      <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ENEMY_ABILITIES_ROW_WRAPPER_ID"
        >

      </LinearLayout>

      <Button
        android:text="@string/add_enemy_achieve_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ENEMY_ABILITIES_ADD_BTN_ID"
        style="@style/common_action_button"/>

      <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:ems="10"
        android:id="@+id/ENEMY_EDIT_DESCRIPTION_ID"
        android:layout_marginBottom="40dp"/>

    </LinearLayout>
  </ScrollView>

  <fragment
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:name="com.masterhelper.ui.enemies.EnemyBottomButtonsFragment"
    android:id="@+id/SCRIPT_ENEMY_BOTTOM_BUTTONS"
    tools:layout="@layout/fragment_script_bottom_buttons"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/scrollView2"
    app:layout_constraintVertical_bias="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>